// TechMarket — Catalog Service DB (MySQL)
// DB-per-service: категорії та товари

Table categories {
  id char(36) [primary key]
  name varchar(255)
  parent_category_id char(36) [ref: > categories.id, note: 'Nullable; ієрархія категорій']

  Indexes {
    (name) [unique]
  }
}

Table products {
  id char(36) [primary key]
  name varchar(255)
  sku varchar(100) [unique, note: 'Артикул']
  category_id char(36) [ref: > categories.id]
  price decimal(10,2) [note: 'Ціна продажу']
  cost decimal(10,2) [note: 'Собівартість']
  status varchar(20) [note: 'active/inactive']
  created_at datetime
  updated_at datetime

  Indexes {
    (category_id)
  }
}

